fix text wrapping / avatar float issue

--- a/app/assets/stylesheets/snowcrash/modules.scss
+++ b/app/assets/stylesheets/snowcrash/modules.scss
@@ -136,6 +136,10 @@
   img {
     @include rounded(50%)
   }
+
+  &.gravatar-inline {
+    margin-bottom: -3px;
+  }
 }
 
 table.table-ajax-inputs {
